# claude-plugins

./: .gitignore  .markdownlint.yaml  .semgrep.yaml  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  prompt-quality.yml  python-quality.yml  security-audit-validation.yml
.qlty/: qlty.toml
.qlty/configs/: .shellcheckrc
docs/superpowers/specs/: 2026-06-09-php-backend-sdlc-plugin-design.md
plugins/php-backend-sdlc/: README.md
plugins/php-backend-sdlc/.claude-plugin/: plugin.json
plugins/php-backend-sdlc/agents/: ci-fixer.md  code-quality-reviewer.md  fr-nfr-reviewer.md  php-implementer.md  pr-comment-resolver.md  qa-manual-tester.md  security-auditor.md
plugins/php-backend-sdlc/commands/: sdlc-finish-pr.md  sdlc-implement.md  sdlc-issue.md  sdlc-plan.md  sdlc-qa.md  sdlc-review.md  sdlc-setup.md  sdlc.md
plugins/php-backend-sdlc/docs/: degrade-matrix.md  permissions.md  profile-schema.md  release-process.md  sdlc-loop.md  setup-walkthrough.md
plugins/php-backend-sdlc/scripts/: ai-review-loop.sh  fr-nfr-gate.sh  generate-profile.sh  get-pr-comments.sh  inject-governance.sh  post-review-findings.sh  publish-wiki.sh  setup-preflight.sh  validate-profile.sh
plugins/php-backend-sdlc/skills/: AI-AGENT-GUIDE.md  SKILL-DECISION-GUIDE.md
plugins/php-backend-sdlc/tests/: ai-review-loop.bats  common-lib.bats  component-counts.bats  fr-nfr-gate.bats  generate-profile.bats  get-pr-comments.bats  inject-governance.bats  post-review-findings.bats  setup-preflight.bats  validate-profile.bats
plugins/php-backend-sdlc/wiki/: Agents.md  Architecture.md  Commands.md  Concepts-and-Glossary.md  Contributing-and-Releases.md  Degrade-and-Resilience.md  FAQ.md  Getting-Started.md  Home.md  Permissions.md  Project-Profile.md  Publishing-PR-Comments.md  Review-and-Quality-Gates.md  Security-Audit.md  Skills.md  Testing-and-Validation.md  The-SDLC-Loop.md  Troubleshooting.md  _Footer.md  _Sidebar.md
specs/autonomous/2026-06-09-php-backend-sdlc-plugin/: architecture.md  epics.md  implementation-readiness.md  prd.md  product-brief.md  research.md  retrospective.md  run-summary.md
specs/autonomous/2026-06-14-publish-review-comments/: architecture.md  epics.md  implementation-readiness.md  (+3 more)
specs/php-backend-sdlc-docs/: architecture.md  epics.md  prd.md  product-brief.md
tools/plugin-quality/: .gitignore  README.md  run.sh
tools/security-audit-validation/: .gitignore  README.md  corpus.py  detect.py
(+256 files in other folders)
